# python

ShopifyAPI/: .gitignore  init.py  main.py  pyproject.toml
ShopifyAPI/app/: authenticate.py  order.py  product.py  shop.py
abc/abstractmethod/: test_app.py
bytes/decode/: test_app.py
collections/: pyproject.toml
collections/ChainMap/: test_ChainMap.py
csv/: test_app.py
fastapi/Depends/: test_app.py
fastapi/WebSocket/: test_app.py
fastapi/basic/: test_app.py
filelock/FileLock/: pyproject.toml  test.txt  test_app.py
functools/partial/: test_app.py
jsonref/loads/: pyproject.toml  test_app.py
operator/attrgetter/: test_app.py
os/cpu_count/: test_app.py
pydantic/PrivateAttr/: test_app.py
pydantic/create_model/: test_app.py
pypdf/PdfWriter/append/: .gitignore  pyproject.toml  test_app.py
range/: test_app.py
re/compile/: test_app.py
re/escape/: test_app.py
re/findall/: test_app.py
re/fullmatch/: test_app.py
re/match/: test_app.py
re/search/: test_app.py
re/split/: test_app.py
re/sub/: test_app.py
set/add/: test_app.py
set/clear/: test_app.py
set/copy/: test_app.py
set/difference_update/: test_app.py
set/discard/: test_app.py
set/intersection_update/: test_app.py
set/pop/: test_app.py
set/remove/: test_app.py
set/symmetric_difference_update/: test_app.py
set/update/: test_app.py
sqlalchemy/delete/: test_app.py
sqlalchemy/insert/: test_app.py
sqlalchemy/orm/Session/get_bind/: pyproject.toml  test_app.py
sqlalchemy/update/: test_app.py
sqlite3/set_trace_callback/: pyproject.toml  test_app.py
str/capitalize/: test_app.py
str/center/: test_app.py
str/count/: test_app.py
str/endswith/: pyproject.toml  test_app.py
str/find/: test_app.py
str/format/: test_app.py
str/index/: test_app.py
str/isdecimal/: test_app.py
string/ascii_letters/: test_app.py
string/ascii_lowercase/: test_app.py
string/ascii_uppercase/: test_app.py
string/capwords/: test_app.py
string/digits/: test_app.py
string/hexdigits/: test_app.py
string/octdigits/: test_app.py
string/punctuation/: test_app.py
string/whitespace/: test_app.py
(+176 files in other folders)
