[tool.poetry]
name = "basic-example"
version = "0.1.0"
description = ""
authors = ["jongwoo Yoo <dbwhddn10@gmail.com>"]

[tool.poetry.dependencies]
pydantic = {extras = ["email", "dotenv"], version = "^1.9.0"}
python = "^3.10"
jsonref = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^6.2.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
